# numC

./: CMakeLists.txt  README.md  main.cpp
include/: customKernels.hpp  npArrayCpu.hpp  npFunctions.hpp  npRandom.hpp
openblas/lib/: libopenblas.exp
openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
openblas/lib/pkgconfig/: openblas64.pc
